--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-node_modules
+# Dependencies
+node_modules/
+yarn-debug.log*
+yarn-error.log*
+
+# Yarn 4.x specific
+.yarn/cache
+.yarn/install-state.gz
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+.DS_Store
